# DTK

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DTK.md  LICENSE  README.md  RELEASING.md  install-dev.sh  install.sh  release-plz.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  homebrew.yml  release-plz.yml  release-pr.yml  release.yml
samples/: config.cargo_lock_packages.toml.json  config.csv_inventory_export.csv.json  config.dummyjson.users.json  config.ini_plugin_registry.ini.json  config.kubernetes.deployment.yaml.json  config.pyproject_manifest.toml.json  config.terraform_module_variables.tf.json  config.xaml_resource_dictionary.xaml.json  config.xml_rss_feed.xml.json  payload.cargo_lock_packages.toml  payload.csv_inventory_export.csv  payload.ini_plugin_registry.ini  payload.kubernetes.deployment.yaml  payload.pyproject_manifest.toml  payload.terraform_module_variables.tf  payload.xaml_resource_dictionary.xaml  payload.xml_rss_feed.xml
scripts/: attach_dtk_md.sh  dtk_pretool_hook.sh  dtk_uninstall.sh
skills/dtk/: SKILL.md
skills/dtk-allowlist-tuner/: SKILL.md
src/: lib.rs  main.rs
src/cli/: cache.rs  config.rs  gain.rs  install.rs  marketplace.rs  mod.rs  session.rs
src/cli/gain/: mod.rs  (+2 more)
src/lib/: claude.rs  codex.rs  config.rs  cursor.rs  filter.rs  install.rs  paths.rs  samples.rs  store.rs  tests.rs  usage.rs
tests/: dtk_exec_csv.rs  dtk_exec_hcl.rs  dtk_exec_ini.rs  dtk_exec_pyproject.rs  dtk_exec_toml.rs  dtk_exec_xaml.rs  dtk_exec_xml.rs  dtk_exec_yaml.rs  release_plz_config.rs
(+41 files in other folders)
