[package]
name = "dtk"
version = "0.0.2"
edition = "2021"
default-run = "dtk"
license = "MIT"
description = "Dynamic Token Killer for AI assistants"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
dialoguer = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
